@@ -286,6 +286,7 @@ Changes:
 - Added shell-script dvd-chapter-mkv.sh 
 - Integrate installation / upgrade of makemkv 1.6.6 into setup.sh (only 64)
 - Locking sections implemented. 
+- Added Section inside README about the long operation for dvd-chapter-mkv.sh 
 
 Fixes:
 
